--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="/css/coder.min.15b270eb1a966a7719a357412326bfb0e6434421100578d4f4de680b5546bc79.css"
     integrity="sha256-FbJw6xqWancZo1dBIya/sOZDRCEQBXjU9N5oC1VGvHk=" crossorigin="anonymous" media="screen" />
-  <link rel="icon" type="image/png" href="/favicon.ico" sizes="32x32">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body class="preload-transitions colorscheme-auto">
