--- a/about/index.html
+++ b/about/index.html
@@ -2836,7 +2836,7 @@
 
 <h1 id="about">About</h1>
 <h2 id="about-this-blog">About this blog</h2>
-<p>This is an another attempt to write a blog. My aim is to capture my thoughts, findings and similar things around tech which are interesting for me. I am not sure whether it will be valuable for other people. So now you are mentally equipped to read it 😉.</p>
+<p>This is an another attempt to write a blog. My aim is to capture my thoughts, findings and similar things around tech which are interesting for me. I am not sure whether it will be valuable for other people. So you are warned 😉.</p>
 
 
 
