See https://github.com/halyph/mind-flow/commit/f637a322f9c33d5a0555312478e4198bb7bb58e3 from refs/heads/master

--- a/wiki/mkdocs-tips-tricks/index.html
+++ b/wiki/mkdocs-tips-tricks/index.html
@@ -2960,11 +2960,11 @@
 <h1 id="mkdocs-tips-and-tricks">Mkdocs - Tips and Tricks</h1>
 <h2 id="plugins">Plugins</h2>
 <ul>
-<li><a href="https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin">mkdocs-awesome-pages-plugin</a> sorts pages in navigation section (descending order)</li>
-<li><a href="https://github.com/timvink/mkdocs-git-revision-date-localized-plugin">mkdocs-git-revision-date-localized-plugin</a> adds the date on which a Markdown file was last updated at the bottom of each page</li>
+<li><a href="https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin"><strong>mkdocs-awesome-pages-plugin</strong></a> sorts pages in navigation section (descending order)</li>
+<li><a href="https://github.com/timvink/mkdocs-git-revision-date-localized-plugin"><strong>mkdocs-git-revision-date-localized-plugin</strong></a> adds the date on which a Markdown file was last updated at the bottom of each page</li>
 </ul>
 <h2 id="sample-mkdocs-site">Sample Mkdocs site</h2>
-<p>Here is a collections of MkDocs-based site for inspiration</p>
+<p>Here is a collections of MkDocs-based sites and repos for my inspiration</p>
 <ul>
 <li><a href="https://3os.org">https://3os.org</a></li>
 <li><a href="https://github.com/squidfunk/mkdocs-material/blob/master/.github/workflows/documentation.yml">mkdocs-material <em>Github Action</em></a> - clean sample for site deployment</li>
