See https://github.com/halyph/mind-flow/commit/76385509bedee3903c3c4b09ecfdf1b429e5389b from refs/heads/master

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navigation">
       <section class="container">
         <a class="navigation-title" href="/">
-          halyph
+          ha/yph
         </a>
 
         <input type="checkbox" id="menu-toggle" />
